employee.js Add get, post

--- a/views/employee.hbs
+++ b/views/employee.hbs
@@ -12,22 +12,15 @@
     <label><input type "text" class = "input-search" placeholder = "Search"></label>
     <label><button> Search </button></label>
     <br>
-    <label><button> Add Employee </button></label>
+    <button type="submit" onclick="location.href='/employee/add'"> Add Employee </button>
   </div>
 
   <div class = "employeecontainer">
     <br>
-    <!--
     {{#each employee}}
     {{this.lastName}} {{this.firstName}}
     <img src="{{this.photo}}" class="img-responsive" alt="{{this.lastName}}">
     {{/each}}
-  -->
-
-        <ul><a href = "link">Empleado 1</a></ul>
-        <ul><a href = "link">Empleado 2</a></ul>
-        <ul><a href = "link">Empleado 3</a></ul>
-
   </div>
 
 </body>
