--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -26,5 +26,6 @@
 
     <script src="/javascripts/bootstrap.min.js"></script>
 -->
+        script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
   </body>
 </html>
