--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -11,21 +11,6 @@
     <link rel = "stylesheet" href = "/stylesheets/container.css">
   </head>
   <body>
-    <!--
-    {{> menu}}
-
-    <div class="container">
-      {{{body}}}
-    </div>
-
-    <script
-         src="https://code.jquery.com/jquery-3.1.1.min.js"
-         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-         crossorigin="anonymous"></script>
-
-
-    <script src="/javascripts/bootstrap.min.js"></script>
--->
-        script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
+        <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'</script>
   </body>
 </html>
