--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -11,6 +11,8 @@
     <link rel = "stylesheet" href = "/stylesheets/container.css">
   </head>
   <body>
-        <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'</script>
+<!--
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+-->
   </body>
 </html>
