--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -11,6 +11,9 @@
     <link rel = "stylesheet" href = "/stylesheets/container.css">
   </head>
   <body>
+    <div class="container">
+      {{{body}}}
+    </div>
 <!--
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 -->
