--- a/public/stylesheets/container.css
+++ b/public/stylesheets/container.css
@@ -27,7 +27,7 @@
   margin-top: 15px;
   margin-right: 200px;
   margin-left: 200px;
-  height: 550px;
+  height: auto;
   background: #4cd13a;
   text-align: center;
   text-align: left; }
