--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,7 +20,7 @@
           <br><br>
           <input id="password" name="password" type="password" class="input-pass" placeholder="Password">
           <br><br>
-          <button type="submit"> Log in </button>
+          <button type="submit" onclick="location.href='/employee'"> Log in </button>
         </form>
       </div>
     </div>
