--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -17,5 +17,7 @@
 <!--
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 -->
+        <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
+        <script src='../../public/javascripts/main.js'></script>
   </body>
 </html>
