--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -14,10 +14,8 @@
     <div class="container">
       {{{body}}}
     </div>
-<!--
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
--->
         <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
-        <script src='../../public/javascripts/main.js'></script>
+        <script src='/javascripts/main.js'></script>
+        <script src="/controllers/employeeManager.js"></script>
   </body>
 </html>
